--- a/dev/index.html
+++ b/dev/index.html
@@ -1,50 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Put Web Page Title Here...</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Put Web Page Title Here...</title>
 
-	<!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
-	<!-- Put Google Fonts Here -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
-	<!-- end Google Fonts -->
+    <!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
+    <!-- Put Google Fonts Here -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- end Google Fonts -->
 
-	<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-	<link rel="stylesheet" href="styles/styles.css?cb=1617041066163">
+    <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
+    <link rel="stylesheet" href="styles/styles.css?cb=1617041066163" />
+  </head>
+  <body>
+    <!-- Put your HTML code here... -->
 
-</head>
-<body>
+    <header>
+      <!-- logo placeholder -->
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Products</li>
+          <li>Services</li>
+          <li>Parts</li>
+          <li>News</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="hero">
+        <h1>
+          We design and fabricate indestructible wasterwater screens. Enough
+          said.
+        </h1>
+        <div>View Products</div>
+        <div>View Services</div>
+      </section>
+	  	<section>
+	  		<h2>Customized per order</h2>
+	  		<p>Just as no two treatment plants are the same, no two of our screening, grit handling or sludge thickening products are either. We’ll help determine exactly what you need.</p>
+			<h3>Screening</h3>
+			<img 
+			srcset="
+			images/machine-01-912x834.png 912w,
+			images/machine-01-768x702.png 768w,
+			images/machine-01-300x274.png 300w">
 
-<!-- Put your HTML code here... -->
+			<a href="#">View Selection</a>
+			<hr>
+			<h3>Screenings Handling</h3>
+			<img 
+			srcset="
+			images/machine-02-912x834.png 912w,
+			images/machine-02-768x702.png 768w,
+			images/machine-02-300x274.png 300w">
 
-<header>
-	<!-- logo placeholder -->
-	<nav>
+			<a href="">View Selection</a>
+			<hr>
+			<h3>Grit Handling</h3>
+			<img 
+			srcset="
+			images/machine-03-912x834.png 912w,
+			images/machine-03-768x702.png 768w,
+			images/machine-03-300x274.png 300w">
 
-	</nav>
-</header>
-<main>
-	<section id="hero">
-		<h2>We design and fabricate indestructible wasterwater screens. Enough said.</h2>
-		<div>View Products</div>
-		<div>View Services</div>
+			<a href="">View Selection</a>
+			<hr>
+			<h3>Sludge Thickening</h3>
+			<img 
+			srcset="
+			images/machine-04-912x834.png 912w,
+			images/machine-04-768x702.png 768w,
+			images/machine-04-300x274.png 300w">
+
+			<a href="">View Selection</a>
+	  <section>
+	
+		<section id="product-advisor">
+			<h2>Product Advisor</h2>
+			<p>Find your project's perfect fit.</p>
+			<hr>
+			<form action="/" method="post" class="product-form">
+				<div class="form-row">
+					<label for="product-type">Prodcut Type</label>
+					<select name="product-type" id="product-type">
+						<option value="select">Select</option>
+						<option value="option-1">Lorem Ipsum</option>
+						<option value="option-2">Lorem Ipsum</option>
+					</select>
+				</div>
+		​
+				<div class="form-row">
+					<label for="screen-location">Screen Location</label>
+					<select name="screen-location" id="screen-location">
+						<option value="select">Select</option>
+						<option value="option-1">Lorem Ipsum</option>
+						<option value="option-2">Lorem Ipsum</option>
+					</select>
+				</div>
+		​
+				<div class="form-row">
+					<label for="flow-type">Flow Type</label>
+					<select name="flow-type" id="flow-type">
+						<option value="select">Select</option>
+						<option value="option-1">Lorem Ipsum</option>
+						<option value="option-2">Lorem Ipsum</option>
+					</select>
+				</div>
+		​
+				<div class="form-row">
+					<label for="channel-depth">Channel Depth</label>
+					<select name="channel-depth" id="channel-depth">
+						<option value="select">Select</option>
+						<option value="option-1">Lorem Ipsum</option>
+						<option value="option-2">Lorem Ipsum</option>
+					</select>
+				</div>
+		​
+				<div class="form-row">
+					<label for="channel-width">Channel Width</label>
+					<select name="channel-width" id="channel-width">
+						<option value="select">Select</option>
+						<option value="option-1">Lorem Ipsum</option>
+						<option value="option-2">Lorem Ipsum</option>
+					</select>
+				</div>
+		​
+		​
+				<div class="form-row">
+					<input type="submit" value="Find My Product">
+				</div>
+		​
+			</form>
+		​
+			<form action="/" method="post" class="sign-up-form">
+				<div class="form-row">
+					<label for="sign-up-title">Stay in the know. Sign up for our newsletter.</label>
+					<input type="text" name="email" id="email" placeholder="Enter your email">
+				</div>
+		​
+				<div class="form-row">
+					<input type="submit" value="Submit">
+				</div>
+		​
+			</form>
+		
 		</section>
-</main>
 
+		<section id="about-us">
+			<h3>Delivering clean safe water since 1975. Refreshing indeed.</h3>
+			<p>Vulcan wastewater screening equipment has played a vital role in protecting the water supply of more than 900 cities and communities throughout the world.</p>
+			<div>About Us</div>
+		</section>
+		<section id="media">
+			<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/183929811?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<p><a href="https://vimeo.com/183929811">Vulcan Industries</a> from <a href="https://vimeo.com/paradigmcreativemedia">Paradigm Creative Media, Inc.</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
+		</section>
 
-<footer>
+		<section id="sign-up">
+			<p>Stay in the know. Sign up for our newsletter.</p>
+			<input type="text" id="email" placeholder="enter your email">
+			<button id="submit">Submit</button>
+		</section>
 
-</footer>
+		<section id="install">
+			<h3>Installed in a city near you</h3>
+			<button id="find">Find a Vulcan install</button>
+			<h3>Ready to spec Vulcan for your project</h3>
+			<button id="find">Contact Us</button>
+		</section>
 
+    </main>
 
+    <footer>
+		<ul>
+			<li>Facebook</li>
+			<li>LinkedIn</li>
+			<li>+1 712-642-2755</li>
+			<li>Contact Us</li>
+		</ul>
+		<h6>Copyright 2017. All rights reserved</h6>
+	</footer>
 
-<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
-<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
-<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-<script src="scripts/script.min.js?cb=1617041066163"></script>
-<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->	
-</body>
+    <!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
+    <script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
+    <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
+    <script src="scripts/script.min.js?cb=1617041066163"></script>
+    <!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
+  </body>
 </html>
