--- a/dev/index.html
+++ b/dev/index.html
@@ -23,13 +23,14 @@
     <header>
       <!-- logo placeholder -->
       <nav>
+		  <img src="images/logo-white-vulcan.svg" alt="logo">
         <ul>
-          <li>About</li>
-          <li>Products</li>
-          <li>Services</li>
-          <li>Parts</li>
-          <li>News</li>
-          <li>Contact</li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Parts</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
