--- a/dev/index.html
+++ b/dev/index.html
@@ -40,8 +40,8 @@
           We design and fabricate indestructible wasterwater screens. Enough
           said.
         </h1>
-        <div>View Products</div>
-        <div>View Services</div>
+        <div><a href="#">View Products</a></div>
+        <div><a href="#">View Services</a></div>
       </section>
 	  	<section>
 	  		<h2>Customized per order</h2>
