--- a/dev/index.html
+++ b/dev/index.html
@@ -22,8 +22,8 @@
 
     <header>
       <!-- logo placeholder -->
-      <nav>
-		  <img src="images/logo-white-vulcan.svg" alt="logo">
+	  <img src="images/logo-white-vulcan.svg" alt="logo">
+	  <nav>
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="#">Products</a></li>
@@ -43,7 +43,7 @@
         <div><a href="#">View Products</a></div>
         <div><a href="#">View Services</a></div>
       </section>
-	  	<section>
+	  	<section id="customized">
 	  		<h2>Customized per order</h2>
 	  		<p>Just as no two treatment plants are the same, no two of our screening, grit handling or sludge thickening products are either. We’ll help determine exactly what you need.</p>
 			<h3>Screening</h3>
