--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,43 +9,112 @@
 	<!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
 	<!-- Put Google Fonts Here -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+		rel="stylesheet">
 	<!-- end Google Fonts -->
 
 	<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-	<link rel="stylesheet" href="styles/styles.css?cb=1617041066163">
+	<link rel="stylesheet" href="styles/styles.css?cb=1617124391045">
 
 </head>
+
 <body>
 
-<!-- Put your HTML code here... -->
+	<!-- Put your HTML code here... -->
 
-<header>
-	<!-- logo placeholder -->
-	<nav>
+	<header>
+		<!-- logo placeholder -->
+		<nav>
 
-	</nav>
-</header>
-<main>
-	<section id="hero">
-		<h2>We design and fabricate indestructible wasterwater screens. Enough said.</h2>
-		<div>View Products</div>
-		<div>View Services</div>
-		</section>
-</main>
+		</nav>
+	</header>
+	<main>
+		
+		<h2>Product Advisor</h2>
+		<p>Find your project's perfect fit.</p>
+		<hr>
+		<form action="/" method="post" class="product-form">
+			<div class="form-row">
+				<label for="product-type">Prodcut Type</label>
+				<select name="product-type" id="product-type">
+					<option value="select">Select</option>
+					<option value="option-1">Lorem Ipsum</option>
+					<option value="option-2">Lorem Ipsum</option>
+				</select>
+			</div>
+
+			<div class="form-row">
+				<label for="screen-location">Screen Location</label>
+				<select name="screen-location" id="screen-location">
+					<option value="select">Select</option>
+					<option value="option-1">Lorem Ipsum</option>
+					<option value="option-2">Lorem Ipsum</option>
+				</select>
+			</div>
+
+			<div class="form-row">
+				<label for="flow-type">Flow Type</label>
+				<select name="flow-type" id="flow-type">
+					<option value="select">Select</option>
+					<option value="option-1">Lorem Ipsum</option>
+					<option value="option-2">Lorem Ipsum</option>
+				</select>
+			</div>
+
+			<div class="form-row">
+				<label for="channel-depth">Channel Depth</label>
+				<select name="channel-depth" id="channel-depth">
+					<option value="select">Select</option>
+					<option value="option-1">Lorem Ipsum</option>
+					<option value="option-2">Lorem Ipsum</option>
+				</select>
+			</div>
+
+			<div class="form-row">
+				<label for="channel-width">Channel Width</label>
+				<select name="channel-width" id="channel-width">
+					<option value="select">Select</option>
+					<option value="option-1">Lorem Ipsum</option>
+					<option value="option-2">Lorem Ipsum</option>
+				</select>
+			</div>
+
+			
+			<div class="form-row">
+				<input type="submit" value="FIND MY PRODUCT">
+			</div>
+
+		</form>
+
+		<form action="/" method="post" class="sign-up-form">
+			<div class="form-row">
+				<label for="sign-up-title">Stay in the know. Sign up for our newsletter.</label>
+				<input type="text" name="email" id="email" placeholder="Enter your email">
+			</div>
+
+			<div class="form-row">
+				<input type="submit" value="SUBMIT">
+			</div>
+
+		</form>
+
+
+	</main>
 
 
 
-<footer>
+	<footer>
 
-</footer>
+	</footer>
 
 
 
-<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
-<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
-<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-<script src="scripts/script.min.js?cb=1617041066163"></script>
-<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->	
+	<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
+	<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
+	<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
+	<script src="scripts/script.min.js?cb=1617124391045"></script>
+	<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 </body>
+
 </html>
