minor edits to index.html

--- a/dev/index.html
+++ b/dev/index.html
@@ -18,11 +18,14 @@
     <link rel="stylesheet" href="styles/styles.css?cb=1617126394458" />
   </head>
   <body>
+	  <div id="wrapper">
     <!-- Put your HTML code here... -->
 
     <header>
       <!-- logo placeholder -->
-	  <img src="images/logo-white-vulcan.svg" alt="logo">
+	 <div id="logo"> 
+		<a href="index.html"><img src="images/logo-white-vulcan.svg" alt="logo"></a>
+	</div>
 	  <nav>
         <ul>
           <li><a href="#">About</a></li>
@@ -195,5 +198,6 @@
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
     <script src="scripts/script.min.js?cb=1617126394458"></script>
     <!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
-  </body>
+</div>  
+</body>
 </html>
