--- a/dev/index.html
+++ b/dev/index.html
@@ -43,8 +43,10 @@
           We design and fabricate indestructible wasterwater screens. Enough
           said.
         </h1>
-        <div><a href="#">View Products</a></div>
-        <div><a href="#">View Services</a></div>
+		<div id="hero-buttons">
+        <div id="hero-button"><a href="#">View Products</a></div>
+        <div id="hero-button"><a href="#">View Services</a></div>
+		</div>
       </section>
 	  	<section id="customized">
 	  		<h2>Customized per order</h2>
