--- a/dev/index.html
+++ b/dev/index.html
@@ -15,27 +15,33 @@
     <!-- end Google Fonts -->
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <link rel="stylesheet" href="styles/styles.css?cb=1617139207188" />
+    <link rel="stylesheet" href="styles/styles.css?cb=1617221409880" />
   </head>
   <body>
 	  <div id="wrapper">
     <!-- Put your HTML code here... -->
 
-    <header>
+    <header class="navbar">
       <!-- logo placeholder -->
-	 <div id="logo"> 
+		<div class="logo"> 
 		<a href="index.html"><img src="images/logo-white-vulcan.svg" alt="logo"></a>
-	</div>
-	  <nav>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Parts</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
+		</div>
+		<button class="btn-menu" id="btn-menu">
+			<span class="button-content">
+				<span class="text">Menu</span>
+				<span class="bar"></span>
+			</span><!-- end button-content -->
+		</button>
+		<nav id="main-navigation">
+			<ul>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Products</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Parts</a></li>
+			<li><a href="#">News</a></li>
+			<li><a href="#">Contact</a></li>
+			</ul>
+		</nav>
     </header>
     <main>
       <section id="hero">
@@ -166,7 +172,7 @@
 		</section>
 		<section id="media">
 			<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/183929811?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-<p><a href="https://vimeo.com/183929811">Vulcan Industries</a> from <a href="https://vimeo.com/paradigmcreativemedia">Paradigm Creative Media, Inc.</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+			<p><a href="https://vimeo.com/183929811">Vulcan Industries</a> from <a href="https://vimeo.com/paradigmcreativemedia">Paradigm Creative Media, Inc.</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 		</section>
 
@@ -186,6 +192,7 @@
     </main>
 
     <footer>
+		<img src="images/logo-white-vulcan.svg" alt="logo-white-vulcan">
 		<ul class="social_list">
 			<li><a href="#"></a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-2.308c0-1.769.931-2.692 3.029-2.692h1.971v3z"/></svg></a></li>
 			<li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"/></svg></a></li>
@@ -198,8 +205,9 @@
     <!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
     <script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <script src="scripts/script.min.js?cb=1617139207188"></script>
+    <script src="scripts/script.min.js?cb=1617221409880"></script>
     <!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 </div>  
+<!-- <script src="scripts/drop-down.js"></script> -->
 </body>
 </html>
