--- a/dev/index.html
+++ b/dev/index.html
@@ -15,36 +15,36 @@
     <!-- end Google Fonts -->
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <link rel="stylesheet" href="styles/styles.css?cb=1617221409880" />
+    <link rel="stylesheet" href="styles/styles.css?cb=1617227604414" />
   </head>
   <body>
 	  <div id="wrapper">
     <!-- Put your HTML code here... -->
 
-    <header class="navbar">
-      <!-- logo placeholder -->
-		<div class="logo"> 
-		<a href="index.html"><img src="images/logo-white-vulcan.svg" alt="logo"></a>
+	<main>    
+		<div class="navbar">
+			<div class="logo"> 
+				<a href="index.html"><img src="images/logo-white-vulcan.svg" alt="logo"></a>
+			</div>
+			<button class="btn-menu" id="btn-menu">
+				<span class="button-content">
+					<span class="text">Menu</span>
+					<span class="bar"></span>
+				</span><!-- end button-content -->
+			</button>
+			<nav id="main-navigation">
+				<ul>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">PRODUCTS</a></li>
+					<li><a href="#">SERVICES</a></li>
+					<li><a href="#">PARTS</a></li>
+					<li><a href="#">NEWS</a></li>
+					<li><a href="#">CONTACT</a></li>
+					<li><a href="#">INSTALLATION MAP</a></li>
+					<li><a href="#">PRODUCT LITERATURE</a></li>
+				</ul>
+			</nav>
 		</div>
-		<button class="btn-menu" id="btn-menu">
-			<span class="button-content">
-				<span class="text">Menu</span>
-				<span class="bar"></span>
-			</span><!-- end button-content -->
-		</button>
-		<nav id="main-navigation">
-			<ul>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Parts</a></li>
-			<li><a href="#">News</a></li>
-			<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
-    </header>
-
-	<main>
 		<section id="hero">
 			<h1>
 				We design and fabricate indestructible wasterwater screens. Enough said.
@@ -218,7 +218,7 @@
 		<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
 		<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
 		<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-		<script src="scripts/script.min.js?cb=1617155739713"></script>
+		<script src="scripts/script.min.js?cb=1617227604414"></script>
 		<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 	</div>
 </body>
