--- a/dev/index.html
+++ b/dev/index.html
@@ -15,7 +15,7 @@
     <!-- end Google Fonts -->
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <link rel="stylesheet" href="styles/styles.css?cb=1617293391901" />
+    <link rel="stylesheet" href="styles/styles.css?cb=1617296641334" />
   </head>
   <body>
 	  <div id="wrapper">
@@ -39,8 +39,8 @@
 					<li><a href="#">PARTS</a></li>
 					<li><a href="#">NEWS</a></li>
 					<li><a href="#">CONTACT</a></li>
-					<li><a href="#">INSTALLATION MAP</a></li>
-					<li><a href="#">PRODUCT LITERATURE</a></li>
+					<li class= "navnone"><a href="#">INSTALLATION MAP</a></li>
+					<li class= "navnone"><a href="#">PRODUCT LITERATURE</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -226,7 +226,7 @@
 		<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
 		<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
 		<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-		<script src="scripts/script.min.js?cb=1617293391901"></script>
+		<script src="scripts/script.min.js?cb=1617296641334"></script>
 		<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 	</div>
 </body>
