working in mobile res

--- a/dev/index.html
+++ b/dev/index.html
@@ -45,6 +45,18 @@
 			</nav>
 		</div>
 		<section id="hero">
+			<div class="jcarousel-wrapper">
+				<div class="jcarousel">
+					<ul>
+						<li><div><img src="images/header-slider-img-01.jpg" alt="Image 1"></div></li>
+						<li><div><img src="images/header-slider-img-02.jpg" alt="Image 2"></div></li>
+						<li><div><img src="images/header-slider-img-03.jpg" alt="Image 3"></div></li>
+					</ul>
+				</div>
+				<p class="jcarousel-pagination"> 
+					
+				</p>
+			</div>
 			<h1>
 				We design and fabricate indestructible wasterwater screens. Enough said.
 			</h1>
@@ -52,9 +64,7 @@
 				<div id="hero-button"><a href="#">View Products</a></div>
 				<div id="hero-button"><a href="#">View Services</a></div>
 			</div>
-		
-		<img class="wave-white" src="images/wave-white.png" alt="wave background image">
-
+			<img class="wave-white" src="images/wave-white.png" alt="wave background image">
 		</section>
 
 		<section id="customized">
