--- a/dev/index.html
+++ b/dev/index.html
@@ -15,7 +15,7 @@
     <!-- end Google Fonts -->
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <link rel="stylesheet" href="styles/styles.css?cb=1617296641334" />
+    <link rel="stylesheet" href="styles/styles.css?cb=1617320228766" />
   </head>
   <body>
 	  <div id="wrapper">
@@ -202,11 +202,20 @@
 				</form>
 			</section>
 
-			<section id="install">
-				<h3>Installed in a city near you</h3>
-				<button id="find">Find a Vulcan install</button>
-				<h3>Ready to spec Vulcan for your project</h3>
-				<button id="find">Contact Us</button>
+			<section class = "install">
+				<div id ="map">
+					<div class= "map-text">
+					<h3>Installed in a city near you</h3>
+					<div><a href="#">Find a Vulcan install</a></div>
+					</div>
+				</div>
+				<div id = "contact">
+					<div class="contact-text">
+					<h3>Ready to spec Vulcan for your project</h3>
+					<div><a href="#">Contact Us</a></div>
+					</div>
+				</div>
+				<img class="wave-blue-light" src="images/wave-blue-light.png" alt="wave background image">
 			</section>
 
 		</main>
@@ -236,7 +245,7 @@
 		<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
 		<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
 		<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-		<script src="scripts/script.min.js?cb=1617296641334"></script>
+		<script src="scripts/script.min.js?cb=1617320228766"></script>
 		<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 	</div>
 </body>
