--- a/dev/index.html
+++ b/dev/index.html
@@ -15,13 +15,29 @@
     <!-- end Google Fonts -->
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <link rel="stylesheet" href="styles/styles.css?cb=1617417635391" />
+    <link rel="stylesheet" href="styles/styles.css?cb=1617466628171" />
   </head>
   <body>
 	  <div id="wrapper">
 
 	<main>    
 		<div class="navbar">
+			<div class = "icon">
+				<div class = "icon_1">
+				<a href="#">Instllation Map</a>
+				<a href="">Product Literature</a>
+				</div>
+				<div class = "icon_2">
+				<a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+					<path
+						d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3.445 17.827c-3.684 1.684-9.401-9.43-5.8-11.308l1.053-.519 1.746 3.409-1.042.513c-1.095.587 1.185 5.04 2.305 4.497l1.032-.505 1.76 3.397-1.054.516z" />
+					</svg>  +1 712-642-2755</a>
+					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+						<path
+							d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z" />
+					</svg>  Contact Us</a>
+				</div>
+			</div>
 			<div class="logo"> 
 				<a href="index.html"><img src="images/logo-white-vulcan.svg" alt="logo"></a>
 			</div>
@@ -253,7 +269,7 @@
 		<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
 		<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
 		<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-		<script src="scripts/script.min.js?cb=1617417635391"></script>
+		<script src="scripts/script.min.js?cb=1617466628171"></script>
 		<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 	</div>
 </body>
