--- a/dev/index.html
+++ b/dev/index.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Vulcan</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <link rel="stylesheet" href="styles/styles.css?cb=1617485868404" />
+    <link rel="stylesheet" href="styles/styles.css?cb=1617486502587" />
   </head>
   <body>
 	  <div id="wrapper">
@@ -138,7 +139,7 @@
 				<hr>
 				<form action="/" method="post" class="product-form">
 					<div class="form-row">
-						<label for="product-type">Prodcut Type</label>
+						<label for="product-type">Product Type</label>
 						<div class="select-wrapper">
 							<select name="product-type" id="product-type">
 								<option value="select">Select</option>
@@ -285,7 +286,7 @@
 		<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
 		<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
 		<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-		<script src="scripts/script.min.js?cb=1617485868404"></script>
+		<script src="scripts/script.min.js?cb=1617486502587"></script>
 		<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 	</div>
 </body>
