--- a/dev/index.html
+++ b/dev/index.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Vulcan</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
     <link rel="stylesheet" href="styles/styles.css?cb=1617486502587" />
@@ -17,7 +20,7 @@
 		<div class="navbar">
 			<div class = "icon">
 				<div class = "icon_1">
-				<a href="#">Instllation Map</a>
+				<a href="#">Installation Map</a>
 				<a href="">Product Literature</a>
 				</div>
 				<div class="icon_2">
@@ -81,8 +84,8 @@
 					We design and fabricate indestructible wasterwater screens. Enough said.
 				</h1>
 				<div id="hero-buttons">
-					<div id="hero-button"><a href="#">View Products</a></div>
-					<div id="hero-button"><a href="#">View Services</a></div>
+					<div class="hero-button"><a href="#">View Products</a></div>
+					<div class="hero-button"><a href="#">View Services</a></div>
 				</div>
 				<img class="wave-white" src="images/wave-white.png" alt="wave background image">
 			</section>
@@ -96,7 +99,9 @@
 						<img srcset="
 				images/machine-01-912x834.png 912w,
 				images/machine-01-768x702.png 768w,
-				images/machine-01-300x274.png 300w">
+				images/machine-01-300x274.png 300w" 
+				sizes= "max-width(912px) calc(100vw– 40px), 912px"
+				alt="Vulcan machinery photos">
 						<h3>Screening</h3>
 						<a href="#">View Selection</a>
 					</div>
@@ -105,7 +110,9 @@
 						<img srcset="
 				images/machine-02-912x834.png 912w,
 				images/machine-02-768x702.png 768w,
-				images/machine-02-300x274.png 300w">
+				images/machine-02-300x274.png 300w" 
+				sizes= "max-width(912px) calc(100vw– 40px), 912px"
+alt="Vulcan machinery photos">
 						<h3>Screenings Handling</h3>
 						<a href="#">View Selection</a>
 					</div>
@@ -114,7 +121,9 @@
 						<img srcset="
 				images/machine-03-912x834.png 912w,
 				images/machine-03-768x702.png 768w,
-				images/machine-03-300x274.png 300w">
+				images/machine-03-300x274.png 300w" 
+				sizes= "max-width(912px) calc(100vw– 40px), 912px"
+				alt="Vulcan machinery photos">
 						<h3>Grit Handling</h3>
 						<a href="#">View Selection</a>
 					</div>
@@ -123,7 +132,9 @@
 						<img srcset="
 				images/machine-04-912x834.png 912w,
 				images/machine-04-768x702.png 768w,
-				images/machine-04-300x274.png 300w">
+				images/machine-04-300x274.png 300w" 
+				sizes= "max-width(912px) calc(100vw– 40px), 912px"
+				alt="Vulcan machinery photos">
 						<h3>Sludge Thickening</h3>
 						<a href="#">View Selection</a>
 					</div>
