--- a/dev/index.html
+++ b/dev/index.html
@@ -20,7 +20,7 @@
 		<div class="navbar">
 			<div class = "icon">
 				<div class = "icon_1">
-				<a href="#">Installation Map</a>
+				<a href="#">Install Map</a>
 				<a href="">Product Literature</a>
 				</div>
 				<div class="icon_2">
