--- a/dev/index.html
+++ b/dev/index.html
@@ -249,7 +249,7 @@ alt="Vulcan machinery photos">
 				</div>
 				<div id="contact">
 					<div class="contact-text">
-						<h3>Ready to spec Vulcan for your project</h3>
+						<h3>Ready to spec Vulcan for your project?</h3>
 						<div><a href="#">Contact Us</a></div>
 					</div>
 				</div>
