--- a/dev/index.html
+++ b/dev/index.html
@@ -151,7 +151,7 @@ alt="Vulcan machinery photos">
 				<form action="/" method="post" class="product-form">
 					<div class="form-row">
 						<label for="product-type">Product Type</label>
-						<div class="select-wrapper">
+						<div class="select-wrapper-1">
 							<select name="product-type" id="product-type">
 								<option value="select">Select</option>
 								<option value="option-1">Lorem Ipsum</option>
