--- a/dev/index.html
+++ b/dev/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <link rel="stylesheet" href="styles/styles.css?cb=1617486502587" />
+    <link rel="stylesheet" href="styles/styles.css?cb=1617550645532" />
   </head>
   <body>
 	  <div id="wrapper">
@@ -17,7 +17,7 @@
 		<div class="navbar">
 			<div class = "icon">
 				<div class = "icon_1">
-				<a href="#">Instllation Map</a>
+				<a href="#">Install Map</a>
 				<a href="">Product Literature</a>
 				</div>
 				<div class="icon_2">
@@ -52,7 +52,7 @@
 					<li><a href="#">Parts</a></li>
 					<li><a href="#">News</a></li>
 					<li><a href="#">Contact</a></li>
-					<li class= "navnone"><a href="#">Instllation Map</a></li>
+					<li class= "navnone"><a href="#">Installation Map</a></li>
 					<li class= "navnone"><a href="#">Product Literature</a></li>
 				</ul>
 			</nav>
@@ -286,7 +286,7 @@
 		<!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
 		<script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
 		<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-		<script src="scripts/script.min.js?cb=1617486502587"></script>
+		<script src="scripts/script.min.js?cb=1617550645532"></script>
 		<!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 	</div>
 </body>
